Fix layout cause container was not centered.

--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,7 @@ p {
 
 
 .main-container {
-  margin: 6% 10%;
+  margin-top: 5%;
   margin-bottom: 0;
   padding-bottom: 5rem;
 
